--- a/appdetails.json
+++ b/appdetails.json
@@ -18,6 +18,6 @@
   "free":[
     {"id":0, "file":0, "city":"Essen","country":"Germany","image":"germany","ip":"35.197.40.79","active":"true","signal":"a"},
     {"id":1, "file":0, "city":"Hamburg","country":"Germany","image":"germany","ip":"35.197.40.79","active":"true","signal":"b"},
-    {"id":2, "file":1, "city":"Los Angeles CA","country":"United States","image":"unitedstates","ip":"35.197.40.79","active":"true","signal":"c"}
+    {"id":2, "file":1, "city":"USA","country":"United States","image":"unitedstates","ip":"35.197.40.79","active":"true","signal":"c"}
   ]
 }
